# AIagent

./: .gitignore  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
daidainiao_agent/: .gitignore  README.md  pyproject.toml
daidainiao_agent/.github/workflows/: ci.yml
daidainiao_agent/daidainiao_agent/: __init__.py  agent.py  answer_generator.py  app_service.py  cli.py  contradiction.py  corpus.py  decompose.py  evaluation.py  export.py  fastapi_server.py  file_import.py  hybrid.py  llm.py  logging_config.py  model_profiles.py  models.py  pipeline.py  rag.py  rag_lab.py  retrieval.py  review.py  server.py  server_utils.py  session_store.py  steps.py  strategies.py
daidainiao_agent/data/: README.md  demo_eval.json  demo_papers.json
daidainiao_agent/docs/: plan.md
daidainiao_agent/frontend/: analytics.js  api.js  app.js  base.css  components.css  confirm.js  content.css  demo.js  final-payload.js  index.html  layout.css  overlay.js  quality-preset.js  state.js  stream.js  styles.css  tokens.css  ui-v2.css  workspace.js
daidainiao_agent/frontend/data/: demo_session.json
daidainiao_agent/frontend/handlers/: sidebar.js
daidainiao_agent/frontend/icons/: README.md
daidainiao_agent/frontend/render/: chat.js  escape.js  sessions.js
daidainiao_agent/frontend/scripts/: smoke-boot.mjs
daidainiao_agent/scripts/: generate_ragas_eval.py  prepare_openalex.py  prepare_qasper.py
daidainiao_agent/tests/: conftest.py  test_agent.py  test_cli_and_server.py  test_grounding_and_files.py  test_hybrid.py  test_rag_lab.py  test_sessions.py
frontend/: api.js  app.js  confirm.js  index.html  state.js  stream.js  styles.css  workspace.js
frontend/handlers/: mode.js  sidebar.js  utility.js
frontend/render/: ask.js  chat.js  common.js  documents.js  escape.js  evidence.js  rag-lab.js  results.js  sessions.js
research-agent/: .gitignore  pyproject.toml
research-agent/data/: imported_papers.json
research-agent/frontend/: app.js  index.html  styles.css
research-agent/research_agent/: agent.py  cli.py  corpus.py  hybrid.py  llm.py  models.py  retrieval.py  server.py
research-agent/tests/: test_agent.py  test_grounding_and_files.py  test_sessions.py
research_agent/: __init__.py  agent.py  answer_generator.py  app_service.py  cli.py  comparison.py  corpus.py  evaluation.py  fastapi_server.py  file_import.py  hybrid.py  llm.py  logging_config.py  models.py  rag.py  retrieval.py  self_correct.py  server.py
scripts/: generate_ragas_eval.py  prepare_openalex.py  prepare_qasper.py
tests/: conftest.py  test_agent.py  test_grounding_and_files.py  test_sessions.py
