[project]
name = "research-agent"
version = "0.3.0"
description = "Research assistant agent with LangChain, FAISS, DashScope Qwen, and local document import"
requires-python = ">=3.11"
dependencies = [
  "faiss-cpu",
  "langchain-community",
  "langchain-openai",
  "numpy",
  "openai",
  "pydantic",
  "pypdf",
  "pytest",
  "python-docx",
  "ragas",
  "scikit-learn"
]

[project.scripts]
research-agent = "research_agent.cli:main"

[tool.setuptools.packages.find]
include = [
  "research_agent*"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = [
  "tests"
]
